# saddle-world-weather

./: .gitignore  Cargo.toml  LICENSE  README.md  __data.json  index.html
.github/workflows/: ci.yaml  deploy-docs.yaml
_app/: version.json
_app/immutable/assets/: 0.Cu___w4E.css  manifest.DAGDUwuc.css
_app/immutable/chunks/: BAjYxHI0.js  BVOzXL1n.js  By5TQdff.js  CGbRUU1n.js  D2PL5qU_.js  D3udy8KQ.js  D6rU7RKI.js  D8JGr-4S.js  DvcjtUwq.js  O7QY0ZL7.js
_app/immutable/entry/: app.CUKOf-Nx.js  start.DtclDmGP.js
_app/immutable/nodes/: 0.B0hYgb6y.js  1.GyFOCw9d.js  2.ewn0Jz-v.js  3.D8XwBK7B.js  4.qJ8s1xee.js  5.BOp3_yHr.js
demo/basic/: index.html
demo/camera_screen_fx/: index.html
demo/localized_zones/: index.html
demo/shelter_and_occlusion/: index.html
demo/transitions/: index.html
demo/windy_snow/: index.html
demos/basic/: index.html
demos/camera_screen_fx/: index.html
demos/localized_zones/: index.html
demos/shelter_and_occlusion/: index.html
demos/transitions/: index.html
demos/windy_snow/: index.html
docs/: architecture.md  configuration.md  debugging.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: __data.json  index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: __data.json  index.html
docs/debugging/: __data.json  index.html
docs/debugging.md/: __data.json  index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/camera_screen_fx/: Cargo.toml
examples/camera_screen_fx/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs  support.rs
examples/localized_zones/: Cargo.toml
examples/localized_zones/src/: main.rs
examples/shelter_and_occlusion/: Cargo.toml
examples/shelter_and_occlusion/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
examples/transitions/: Cargo.toml
examples/transitions/src/: main.rs
examples/windy_snow/: Cargo.toml
examples/windy_snow/src/: main.rs
src/: components.rs  lib.rs  messages.rs  profiles.rs  resources.rs  solver.rs  solver_tests.rs  surface_materials.rs  surface_materials_tests.rs  surfaces.rs  surfaces_tests.rs  systems.rs  systems_tests.rs  visuals.rs  visuals_tests.rs
tests/: public_api.rs
