[package]
name = "saddle-world-weather"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-world-weather"
license = "MIT-0"
description = "Reusable Bevy weather orchestration for precipitation, fog, wind-driven ambience, transitions, zones, and camera-local weather cues"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
