[workspace]
members = [
    "support",
    "basic",
    "transitions",
    "windy_snow",
    "localized_zones",
    "camera_screen_fx",
    "shelter_and_occlusion",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-world-weather = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
