[workspace]
members = [
    "support",
    "basic",
    "transitions",
    "windy_snow",
    "localized_zones",
    "camera_screen_fx",
    "shelter_and_occlusion",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-world-weather = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
