[package]
name = "saddle-world-weather-example-windy-snow"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-world-weather = { workspace = true }
saddle-world-weather-example-support = { path = "../support" }
saddle-pane = { workspace = true }

[lints]
workspace = true
